# taksiapp

backend/: .gitignore  AGENTS.md  Cargo.toml  build.rs  create_passengers.py  create_users.py  driver_restore_prompt.md  fake_driver_bot.py  fake_passenger_bot.py  insert_drivers.sql  jwt_driver_mode_prompt.md  linux_build.sh  ride_fixes_prompt_2.md  ride_module_prompt.md  ride_v2_fixes_prompt.md  rota_ve_ui_fixes_prompt.md
backend/.zed/: settings.json
backend/migration/: README.md
backend/migration/sql/: schema.sql
backend/migration/src/: lib.rs  m20260112_000001_initial_schema.rs  m20260115_165500_add_azn_jpy_to_exchange_rates.rs  m20260119_120000_unify_addresses.rs  m20260121_090000_create_password_resets_table.rs  m20260121_154900_create_form_submissions_table.rs  m20260130_232437_create_bookmarks_table.rs  m20260201_000001_add_variant_key_to_bookmarks.rs  m20260202_000001_change_bookmarks_price_to_text.rs  m20260204_082600_vocab_hide_lock_field.rs  m20260204_083516_term_hide_lock_field.rs  m20260205_064036_kargo_sirketleri.rs  m20260208_000001_change_cargo_company_to_integer.rs  m20260215_093848_user_type_b2b_b2c.rs  m20260220_000001_create_companies_table.rs  m20260220_000002_create_company_users_table.rs  m20260220_000003_create_company_representatives_table.rs  m20260220_000004_add_logo_to_companies.rs  m20260220_000005_add_commission_rate_to_companies.rs  m20260222_000001_add_cart_type_to_carts.rs  m20260224_000001_add_cargo_price_to_carts.rs  m20260302_000001_add_status_to_cart_items.rs  m20260303_000001_create_b2b_credit_transactions.rs  m20260303_000002_create_representative_commission_transactions.rs  m20260303_000003_remove_representative_columns_from_companies.rs  m20260305_000001_add_refund_fields_to_cart_items.rs  m20260306_000001_create_return_requests_table.rs  m20260311_000001_add_refund_currency_to_cart_items.rs  m20260314_000001_add_currency_to_companies.rs  m20260416_143557_comment.rs  m20260419_215522_add_payment_due_days_to_carts.rs  m20260426_000001_add_discount_percentage_to_cart_items.rs  m20260428_000001_create_campaigns_table.rs  m20260428_000002_create_coupons_table.rs  m20260428_000003_create_cart_discounts_table.rs  m20260428_000004_create_campaign_usages_table.rs  m20260501_130800_add_target_cart_type_to_campaigns.rs  m20260523_000001_create_ride_tables.rs  m20260526_000001_add_driver_user_id_unique.rs  m20260526_000002_add_ride_indexes.rs  (+3 more)
backend/migration/src/entities/: mod.rs  prelude.rs
backend/migration/src/legacy_migrations/: m20220101_000001_create_table.rs  m20241106_000001_create_taxonomy.rs  m20241110_000001_create_content_terms.rs  m20241115_000001_fix_sessions_user_id.rs  m20251122_194428_add_profile_to_users.rs  m20251123_214018_create_media_table.rs  m20251127_000001_add_order_id_to_contents.rs  m20251128_000001_add_content_type_to_content_terms.rs  (+30 more)
backend/src/: app_state.rs  i18n.rs  macros.rs  main.rs  tera_custom_filters.rs  tera_custom_functions.rs  version.rs
backend/src/config/: app_config.rs  database.rs  mod.rs
backend/src/middleware/: auth.rs  error_handler.rs  global_context.rs  jwt.rs  logger.rs  mod.rs  permission.rs
backend/src/modules/: mod.rs
backend/templates/admin/: base.html  dashboard.html  form_demo.html  home_page_builder.html
backend/templates/ahmet3/: base.html  global.txt
backend/templates/balmumcu/: base.html
backend/templates/base/: base.html
backend/templates/baston/: base.html  index.html
backend/templates/greywolf/: base.html
backend/templates/htmls/: index.html  index2.html  index3.html  index4.html
backend/templates/klima/: base.html
backend/templates/licare/: base.html
backend/templates/sgm/: base.html
(+665 files in other folders)
