[workspace]
members = [".", "migration"]


[package]
name = "backend-rs"
version = "2.1.30"
edition = "2021"
authors = ["Tamer YİĞİT <tamer4yigit@gmail.com>"]


[dependencies]
# Axum web framework
axum = { version = "0.8.8", features = ["macros", "ws"] }
axum-extra = { version = "0.12.5", features = [
    "cookie",
    "typed-header",
    "multipart",
] }
tower = "0.5"
tower-http = { version = "0.6.8", features = ["fs", "trace", "cors"] }
tower-sessions = { version = "0.15.0", features = ["signed"] }
rust-i18n = "3.1.5"
tokio = { version = "1.49.0", features = ["full"] }
futures-util = "0.3"
async-trait = "0.1"
# validator = { version = "0.19", features = ["derive"] }
time = { version = "0.3", features = ["macros", "formatting"] }
# SeaORM with rustls instead of native-tls
sea-orm = { version = "1.1.19", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-rust_decimal",
] }
sea-orm-migration = "1.1.19"
migration = { path = "migration" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.148"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
anyhow = "1.0"
toml = "0.9.8"
config = "0.15.19"
colored = "3.0.0"
slug = "0.1.4"
tera = { version = "1.19" }
glob = "0.3"
bcrypt = "0.18.0"
thiserror = "2.0.17"
# JWT token handling - with rust_crypto (pure Rust, no OpenSSL)
jsonwebtoken = { version = "10.2.0", default-features = false, features = [
    "use_pem",
    "rust_crypto",
] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
rust_decimal = { version = "1.37", features = ["db-postgres"] }
rand = "0.9.2"
# SMTP mail sending - rustls for cross-compilation (no OpenSSL dependency)
lettre = { version = "0.11", default-features = false, features = [
    "tokio1-rustls-tls",
    "smtp-transport",
    "builder",
] }
# HTTP client for payment providers
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }

#bu iki kütüphane için reqwest 0.12 kullanıyoruz
openidconnect = { version = "4.0.1", features = ["reqwest"] }
oauth2 = { version = "5.0.0", features = ["reqwest"] }
#bu iki kütüphane için reqwest 0.12 kullanıyoruz

# Crypto for payment provider integrations
sha1 = "0.10"
sha2 = "0.10"
base64 = "0.22"
hmac = "0.12"
hex = "0.4"
# URL encoding for payment forms
# urlencoding = "2.1"
# XML parsing for TCMB exchange rates
roxmltree = "0.21.1"
# Preserve JSON field order
indexmap = { version = "2.12.1", features = ["serde"] }
serde_yml = "0.0.12"
parking_lot = "0.12"
# Embed admin templates into binary
rust-embed = "8.11.0"
lazy_static = "1.4"
regex = "1.10"
image = { version = "0.25", features = ["webp"] }
kamadak-exif = "0.6"
dashmap = "6.1"

redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
futures = "0.3"
# LTO nedir?
# LTO (Link Time Optimization), derleyicinin tüm kodu tek bir birim olarak optimize etmesine olanak tanır.
# Bu, fonksiyonların ve değişkenlerin kullanımını daha iyi analiz ederek gereksiz kodu kaldırabilir,
# fonksiyonları birleştirebilir ve diğer optimizasyonları uygulayabilir. LTO, özellikle büyük projelerde performansı önemli ölçüde artırabilir,
# ancak derleme süresini de uzatabilir. Thin LTO, daha hızlı derleme sağlar ancak bazı optimizasyonları sınırlayabilir,
# fat LTO ise maksimum optimizasyon sunar ancak derleme süresini artırır.

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1

# [profile.dev]
# opt-level = 2
# lto = "thin"
# codegen-units = 1
